<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_100">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_100"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/info_source__0"
                android:textSize="15sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/info_source_0"
                android:textSize="15sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/actionbar_hot"></ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/actionbar_warm"></ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/actionbar_comfortable"></ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/actionbar_cool"></ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/actionbar_cold"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=">30°"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="24°~30°"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="16°~24°"
                    android:textSize="154sp"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="10°~16°"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="&lt;10°"
                    android:textSize="15sp"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/info_source_2"
                android:textSize="15sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/high_temper"></ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/middle_temper"></ImageView>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/low_temper"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=">28°"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="14°~28°"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="&lt;14°"
                    android:textSize="15sp"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/info_source_1"
                android:textSize="15sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/info_source_3"
                android:textSize="15sp"></TextView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>